--- a/src/public/elfinder/elfinder.backpack.theme.css
+++ b/src/public/elfinder/elfinder.backpack.theme.css
@@ -5,6 +5,8 @@
  * @author Cristian Tabacitu [hello@tabacitu.ro]
  **/
 
+ body.elfinder { margin:0; }
+
 /* input textarea */
 .elfinder input,
 .elfinder textarea {
