Remove the border of elFinder when in full screen (#186)

--- a/src/public/elfinder/elfinder.backpack.theme.css
+++ b/src/public/elfinder/elfinder.backpack.theme.css
@@ -5,7 +5,8 @@
  * @author Cristian Tabacitu [hello@tabacitu.ro]
  **/
 
- body.elfinder { margin:0; }
+body.elfinder { margin:0; }
+body.elfinder #elfinder.ui-widget-content { border:none; }
 
 /* input textarea */
 .elfinder input,
